<resources>
    <string name="app_name">DicodingSubmission</string>
    <string name="badgeimage">badgeImage</string>
    <string name="team_name">team name</string>
    <string name="form_year">form year</string>
    <string name="stadiumimage">stadiumImage</string>
    <string name="stadium_name">stadium name</string>
    <string name="profile">Profile</string>
    <string name="my_name">Rizky Faturriza</string>
    <string name="my_email">groshared@gmail.com</string>
</resources>